fixed a few UI issues (overlap navbar animation) mentioned by amaan

--- a/src/components/Dashboard/Dashboard.css
+++ b/src/components/Dashboard/Dashboard.css
@@ -7,7 +7,7 @@
     animation-name: move-top ;
     animation-duration: 2s;
     animation-fill-mode: forwards;
-    z-index: -1;
+    z-index: 100;
 }
 
 @keyframes move-top{
