--- a/src/components/SearchScreen/SearchScreen.css
+++ b/src/components/SearchScreen/SearchScreen.css
@@ -11,3 +11,7 @@
 .hero{
     text-align: center;
 }
+
+.hero__tag{
+    margin: 1rem;
+}
