--- a/src/components/common/Navbar/Navbar.css
+++ b/src/components/common/Navbar/Navbar.css
@@ -1,6 +1,7 @@
 .navbar{
     background:#1D1C27;
     color:white;
+    z-index: 200;
 }
 
 .navbar-brand{
